--- a/Neural Networks/Vectorization/Vectorization.ipynb
+++ b/Neural Networks/Vectorization/Vectorization.ipynb
@@ -55,6 +55,13 @@
     "\n",
     "print('Non-vectorized time: ' + str(1000 * (final-init)) + ' ms')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "teste"
+   ]
   }
  ],
  "metadata": {
